--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <link rel="stylesheet" href="css/useredit.css"> -->
 
     <!-- FONTS -->
+
 </head>
 <body id="home">
 
@@ -33,7 +34,7 @@
 
     <!-- HEADER -->
     <header>
-        <h3 class="header-icon"><a href="#home">DESIGNER · FRONT END DEVELOPER</a></h3>
+        <h3 class="header-icon"><a href="#home">DIGITAL CREATOR · SOFTWARE ENGINEER</a></h3>
         <nav>
             <a class="creations" href="#creations">CREATIONS</a>
             <a class="about" href="#about">ABOUT</a>
@@ -42,6 +43,7 @@
         <!-- <img class="user-icon" src="images/user-photo.png">
         <h3 class="username"></h3>
         <h4 class="eth"></h4> -->
+        <div class="nav-hp">&#10010</div>
         <button class="contact btn-blue">Contact</button>
     </header>
     <!-- END OF HEADER -->
