--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A website for Portfolio of the owner">
     <meta name="theme-color" content="#007AFF"/>
-    <title>xxxxian</title>
+
+    <title>Portfolio | ian</title>
+
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-andri/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-andri/favicon-32x32.png">
