--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- HEADER -->
     <header>
-        <h3 class="header-icon"><a href="#home">DIGITAL CREATOR · SOFTWARE ENGINEER</a></h3>
+        <h3 class="header-icon"><a href="#home">DIGITAL CREATOR · FRONT-END DEVELOPER</a></h3>
         <nav>
             <a class="creations" href="#creations">CREATIONS</a>
             <a class="about" href="#about">ABOUT</a>
@@ -82,7 +82,7 @@
         <div class="wmi">
             <div class="wmi1">
                 <h1>WHO AM I?</h1>
-            <p> My name is Andrian, commonly known as Kelvin. I'm a <span class="age"></span> years old digital artist and software engineer from the Indonesia. I love involving my imagination in my craft, and I always try to come up with new and entertaining ideas!</p>
+            <p> My name is Andrian, commonly known as Kelvin. I'm a <span class="age"></span> years old digital creator and front-end developer from the Indonesia. I love involving my imagination in my craft, and I always try to come up with new and entertaining ideas!</p>
             <button class="btn-blue-blur"><a href="#about" style="text-decoration: none; color: #007AFF;">More Info</a></button>
             </div>
             <div class="wmi2">
