membuat footer dan update responsive

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         </div>
     </main>
 
+    <footer>
+        <div>Handcrafted by me &copy; ian 👻</div>
+    </footer>
+
     
 <script src="script.js"></script>
 <!-- <script src="js/signup.js"></script> -->
