--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
     </main>
 
     <footer>
-        <div>Handcrafted by me &copy; ian 👻</div>
+        <div class="follow-up">
+            <a href="https://instagram.com/andriandme" target="_blank">INSTAGRAM</a>
+            <a href="https://github.com/artxian" target="_blank">GITHUB</a>
+            <a href="https://twitter.com/andriandme" target="_blank">TWITTER</a>
+            <a href="https://www.linkedin.com/in/kelvin-andrian-nataniel-63604b247/" target="_blank">LINKEDIN</a>
+        </div>
+        <div class="copyright">Handcrafted by me &copy; ian 👻</div>
     </footer>
 
     
