--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-andri/favicon-16x16.png">
     <link rel="manifest" href="images/favicon-andri/site.webmanifest">
 
-    <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="css/times.css"> -->
-    <!-- <link rel="stylesheet" href="css/signup.css"> -->
-    <!-- <link rel="stylesheet" href="css/useredit.css"> -->
+    <link rel="stylesheet" href="style.css">
 
     <!-- FONTS -->
 
@@ -26,13 +24,6 @@
 <body id="home">
 
     <button class="go2Top btn-blue" title="Go to Top">&uarr;</button>
-
-    <!-- TIMES -->
-    <!-- <div class="times-container">
-        <h2 id="times"></h2>
-        <p class="name-times"></p>
-    </div> -->
-    <!-- END OF TIMES -->
 
     <!-- HEADER -->
     <header>
@@ -51,32 +42,6 @@
     <!-- END OF HEADER -->
 
     <!-- SIGNUP -->
-    <!-- <div class="signup-modal">
-        <div class="signup-box">
-            <span class="signup-close" title="Close Signup">&times</span>
-            <form class="signup-form">
-                <label for="uname"><h2>Username</h2></label>
-                <input type="text" id="uname" placeholder="Enter Your username | あなたの名前を入力してください" required>
-                <p class="signup-error">max word < 24</p>
-                <button type="submit">LOGIN</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="userEdit-modal">
-        <div class="userEdit-box">
-            <span class="userEdit-close" title="Close User Edit">&times</span>
-            <form class="userEdit-form">
-                <label for="uimg"><h2>Image</h2></label>
-                <p class="success">success</p>
-                <p class="failed">enter your link</p>
-                <input type="text" id="uimg" placeholder="Enter Your Photo Profile Link">
-                <button type="submit">APPLY</button>
-                <button class="logout">CONTACT</button>
-            </form>
-        </div>
-    </div> -->
-    <!-- END OF SIGNUP -->
 
     <main>
         <div class="wmi">
@@ -91,7 +56,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="follow-up">
             <a href="https://instagram.com/andriandme" target="_blank">INSTAGRAM</a>
             <a href="https://github.com/artxian" target="_blank">GITHUB</a>
@@ -100,11 +65,8 @@
         </div>
         <div class="copyright">Handcrafted by me &copy; ian 👻</div>
     </footer>
-
     
 <script src="script.js"></script>
-<!-- <script src="js/signup.js"></script> -->
-<!-- <script src="js/useredit.js"></script> -->
 <!-- <script src="js/times.js"></script> -->
 </body>
 </html>
