--- a/index.html
+++ b/index.html
@@ -1,71 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A website for Portfolio of the owner">
-    <meta name="theme-color" content="#007AFF"/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A website for Portfolio of the owner">
+  <meta name="theme-color" content="#007AFF" />
+<script src="https://kit.fontawesome.com/a19b63e373.js" crossorigin="anonymous"></script>
 
-    <title>Portfolio | ian</title>
+<title>Portfolio | ian</title>
 
-    <!-- FAVICON -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-andri/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-andri/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-andri/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon-andri/site.webmanifest">
+<!-- FAVICON -->
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon-andri/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-andri/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-andri/favicon-16x16.png">
+<link rel="manifest" href="images/favicon-andri/site.webmanifest">
 
-    <!-- <link rel="stylesheet" href="css/times.css"> -->
-    <link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="css/times.css"> -->
+<link rel="stylesheet" href="style.css">
 
-    <!-- FONTS -->
+<!-- FONTS -->
 
 </head>
 <body id="home">
 
-    <button class="go2Top btn-blue" title="Go to Top">&uarr;</button>
+<button class="go2Top btn-blue" title="Go to Top">&uarr;</button>
 
-    <!-- HEADER -->
-    <header>
-        <h3 class="header-icon"><a href="#home">DIGITAL CREATOR · FRONT-END DEVELOPER</a></h3>
-        <nav>
-            <a class="creations" href="#creations">CREATIONS</a>
-            <a class="about" href="#about">ABOUT</a>
-            <a class="soon" href="#home">++</a>
-        </nav>
-        <!-- <img class="user-icon" src="images/user-photo.png">
+<!-- HEADER -->
+<header>
+<h3 class="header-icon"><a href="#home">DIGITAL CREATOR · FRONT-END DEVELOPER</a></h3>
+<nav>
+<a class="creations" href="#creations">CREATIONS</a>
+<a class="about" href="#about">ABOUT</a>
+<a class="soon" href="#home">++</a>
+</nav>
+<!-- <img class="user-icon" src="images/user-photo.png">
         <h3 class="username"></h3>
         <h4 class="eth"></h4> -->
-        <div class="nav-hp">&#10010</div>
-        <button class="contact btn-blue">Contact</button>
-    </header>
-    <!-- END OF HEADER -->
+<div class="nav-hp">
+&#10010
+</div>
+<button class="contact btn-blue">Contact</button>
+</header>
+<!-- END OF HEADER -->
 
-    <!-- SIGNUP -->
+<!-- SIGNUP -->
 
-    <main>
-        <div class="wmi">
-            <div class="wmi1">
-                <h1>WHO AM I?</h1>
-            <p> My name is Andrian, commonly known as Kelvin. I'm a <span class="age"></span> years old digital creator and front-end developer from the Indonesia. I love involving my imagination in my craft, and I always try to come up with new and entertaining ideas!</p>
-            <button class="btn-blue-blur"><a href="#about" style="text-decoration: none; color: #007AFF;">More Info</a></button>
-            </div>
-            <div class="wmi2">
-                <img src="images/ian.jpg" height="260" width="260" alt="ian's image">
-            </div>
-        </div>
-    </main>
+<main>
+<div class="wmi">
+<div class="wmi1">
+<h1>WHO AM I?</h1>
+<p>
+My name is Andrian, commonly known as Kelvin. I'm a <span class="age"></span> years old digital creator and front-end developer from the Indonesia. I love involving my imagination in my craft, and I always try to come up with new and entertaining ideas!
+</p>
+<button class="btn-blue-blur"><a href="#about" style="text-decoration: none; color: #007AFF;">More Info</a></button>
+</div>
+<div class="wmi2">
+<img src="images/ian.jpg" height="260" width="260" alt="ian's image">
+</div>
+</div>
+</main>
 
-    <footer id="footer">
-        <div class="follow-up">
-            <a href="https://instagram.com/andriandme" target="_blank">INSTAGRAM</a>
-            <a href="https://github.com/artxian" target="_blank">GITHUB</a>
-            <a href="https://twitter.com/andriandme" target="_blank">TWITTER</a>
-            <a href="https://www.linkedin.com/in/kelvin-andrian-nataniel-63604b247/" target="_blank">LINKEDIN</a>
-        </div>
-        <div class="copyright">Handcrafted by me &copy; ian 👻</div>
-    </footer>
-    
+<footer id="footer">
+<div class="follow-up">
+<a href="https://instagram.com/andriandme" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+<a href="https://github.com/artxian" target="_blank"><i class="fa-brands fa-github"></i></a>
+<a href="https://www.linkedin.com/in/kelvin-andrian-nataniel-63604b247/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+</div>
+<div class="copyright">
+Handcrafted by me &copy; ian 👻
+</div>
+</footer>
+
 <script src="script.js"></script>
 <!-- <script src="js/times.js"></script> -->
 </body>
