--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/favicon-andri/apple-touch-icon.png"
+      href="img/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/favicon-andri/favicon-32x32.png"
+      href="img/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="images/favicon-andri/favicon-16x16.png"
+      href="img/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="images/favicon-andri/site.webmanifest" />
+    <link rel="manifest" href="img/favicon/site.webmanifest" />
 
     <link rel="stylesheet" href="style.css" />
 
@@ -39,51 +39,19 @@
   </head>
 
   <body id="home">
-    <button class="go2Top btn-blue" title="Go to Top">&uarr;</button>
+    <img src="img/emojis/pointing-up.png" alt="" class="go2Top" />
 
     <!-- HEADER -->
     <header>
-      <h3 class="header-icon">
-        <a href="#home">DIGITAL CREATOR · FRONT-END DEVELOPER</a>
-      </h3>
       <nav>
-        <a class="creations" href="#creations">CREATIONS</a>
-        <a class="about" href="#about">ABOUT</a>
-        <a class="soon" href="#home">++</a>
+        <h3 class="header-icon">
+          <a href="#home">ian</a>
+        </h3>
+        <div class="nav-hp">&#10010;</div>
+        <button class="resume btn">Resume</button>
       </nav>
-      <div class="nav-hp">&#10010;</div>
-      <button class="contact btn-blue">Contact</button>
     </header>
     <!-- END OF HEADER -->
-
-    <!-- SIGNUP -->
-
-    <main>
-      <div class="wmi">
-        <div class="wmi1">
-          <h1>WHO AM I?</h1>
-          <p>
-            My name is Andrian, commonly known as Kelvin. I'm a
-            <span class="age"></span> years old digital creator and front-end
-            developer from the Indonesia. I love involving my imagination in my
-            craft, and I always try to come up with new and entertaining ideas!
-          </p>
-          <button class="btn-blue-blur">
-            <a href="#about" style="text-decoration: none; color: #007aff"
-              >More Info</a
-            >
-          </button>
-        </div>
-        <div class="wmi2">
-          <img
-            src="images/ian.jpg"
-            height="260"
-            width="260"
-            alt="ian's image"
-          />
-        </div>
-      </div>
-    </main>
 
     <footer id="footer">
       <div class="follow-up">
@@ -99,7 +67,13 @@
           ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
-      <div class="copyright">Handcrafted by me &copy; ian 👻</div>
+      <a
+        class="copyright"
+        href="https://github.com/artxian/artxian.github.io"
+        target="_blank"
+      >
+        <div>Designed & Developed by Kelvin Andrian Nataniel</div>
+      </a>
     </footer>
 
     <script src="script.js"></script>
