--- a/index.html
+++ b/index.html
@@ -47,11 +47,24 @@
         <h3 class="header-icon">
           <a href="#home">ian</a>
         </h3>
-        <div class="nav-hp">&#10010;</div>
-        <button class="resume btn">Resume</button>
+        <div class="nav">
+          <ol>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#contact">Contact</a>
+            </li>
+          </ol>
+          <div class="nav-hp">&#10010;</div>
+          <button class="resume btn">Resume</button>
+        </div>
       </nav>
     </header>
     <!-- END OF HEADER -->
+
+    <!-- CONTENT -->
+    <!-- MAIN -->
 
     <footer id="footer">
       <div class="follow-up">
