--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
     <!-- CONTENT -->
     <!-- MAIN -->
+    <div id="content">
+      <main></main>
+    </div>
 
     <footer id="footer">
       <div class="follow-up">
@@ -84,9 +87,8 @@
         class="copyright"
         href="https://github.com/artxian/artxian.github.io"
         target="_blank"
+        >Designed & Developed by Kelvin Andrian Nataniel</a
       >
-        <div>Designed & Developed by Kelvin Andrian Nataniel</div>
-      </a>
     </footer>
 
     <script src="script.js"></script>
