--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A website for Portfolio of the owner" />
+    <meta name="keywords" content="kelvin andrian nataniel, kelvin, andrian, nataniel, artxian, student, front-end, web, website, designer" />
+    <meta name="author" content="Kelvin Andrian Nataniel" />
+    <meta name="description" content="Web developer and everything in between" />
     <meta name="theme-color" content="#007AFF" />
     <script
       src="https://kit.fontawesome.com/a19b63e373.js"
