--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header>
       <nav>
         <h3 class="header-icon">
-          <a href="#home">ian</a>
+          <a href="https://drian.xyz">ian</a>
         </h3>
         <div class="nav">
           <ol>
