--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
     <!-- CONTENT -->
     <!-- MAIN -->
     <div id="content">
-      <main></main>
+      <main>
+        <section class="hero">
+          <h3>Hi, my name is</h3>
+          <h1>Kelvin Andrian Nataniel.</h1>
+          <p>I'm a design-minded, detail oriented software engineer passionate about combining beautiful code with beautiful design.</p>
+          <h2>Get in touch <span class="emoji pointer"></span> <a class="text" href="mailto:kelvinnatanel13@gmail.com" target="_blank">kelvinnatanael13@gmail.com</a></h2>
+        </section>
+      </main>
     </div>
 
     <footer id="footer">
