--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
           </ol>
           <div class="nav-hp">&#10010;</div>
-          <button class="resume btn">Resume</button>
+          <a href="#" class="resume btn">Resume</a>
         </div>
       </nav>
     </header>
@@ -76,9 +76,9 @@
     <div id="content">
       <main>
         <section class="hero">
-          <h3>Hi, my name is</h3>
-          <h1>Kelvin Andrian Nataniel.</h1>
-          <p>I'm a design-minded, detail oriented software engineer passionate about combining beautiful code with beautiful design.</p>
+          <h3>Hello! <span class="emoji wave"></span></h3>
+          <h1><span>I'm</span> Kelvin Andrian Nataniel,</h1>
+          <p>a design-minded, detail oriented software engineer passionate about combining beautiful code with beautiful design.</p>
           <h2>Get in touch <span class="emoji pointer"></span> <a class="text" href="mailto:kelvinnatanel13@gmail.com" target="_blank">kelvinnatanael13@gmail.com</a></h2>
         </section>
       </main>
