--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Portfolio | ian</title>
+    <title>Kelvin Andrian Nataniel</title>
 
     <!-- FAVICON -->
     <link
@@ -46,6 +46,18 @@
     <!-- FONTS -->
   </head>
 
+  <!-- MODAL -->
+
+  <div class="modal"></div>
+  
+  <!-- END OF MODAL -->
+
+  <!-- SIDE -->
+  <div class="nav-menu">
+
+  </div>
+  <!-- END OF ASIDE -->
+
   <body id="home">
     <img src="img/emojis/pointing-up.png" alt="" class="go2Top" />
 
@@ -64,8 +76,8 @@
               <a href="#contact">Contact</a>
             </li>
           </ol>
-          <div class="nav-hp">&#10010;</div>
           <a href="#" class="resume btn">Resume</a>
+          <div class="nav-hp">&#10010;</div>
         </div>
       </nav>
     </header>
@@ -78,8 +90,19 @@
         <section class="hero">
           <h3>Hello! <span class="emoji wave"></span></h3>
           <h1><span>I'm</span> Kelvin Andrian Nataniel,</h1>
-          <p>a design-minded, detail oriented software engineer passionate about combining beautiful code with beautiful design.</p>
-          <h2>Get in touch <span class="emoji pointer"></span> <a class="text" href="mailto:kelvinnatanel13@gmail.com" target="_blank">kelvinnatanael13@gmail.com</a></h2>
+          <p>
+            a design-minded, detail oriented software engineer passionate about
+            combining beautiful code with beautiful design.
+          </p>
+          <h2>
+            Get in touch <span class="emoji pointer"></span>
+            <a
+              class="text"
+              href="mailto:kelvinnatanel13@gmail.com"
+              target="_blank"
+              >kelvinnatanael13@gmail.com</a
+            >
+          </h2>
         </section>
       </main>
     </div>
