--- a/index.html
+++ b/index.html
@@ -46,20 +46,24 @@
     <!-- FONTS -->
   </head>
 
+  <body id="home">
+    <img src="img/emojis/pointing-up.png" alt="" class="go2Top" />
+
   <!-- MODAL -->
 
   <div class="modal"></div>
-  
+
   <!-- END OF MODAL -->
 
   <!-- SIDE -->
   <div class="nav-menu">
-
+    <ol>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ol>
+    <a href="#" class="nav-menu-resume btn">Resume</a>
   </div>
   <!-- END OF ASIDE -->
-
-  <body id="home">
-    <img src="img/emojis/pointing-up.png" alt="" class="go2Top" />
 
     <!-- HEADER -->
     <header>
@@ -69,12 +73,8 @@
         </h3>
         <div class="nav">
           <ol>
-            <li>
-              <a href="#about">About</a>
-            </li>
-            <li>
-              <a href="#contact">Contact</a>
-            </li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ol>
           <a href="#" class="resume btn">Resume</a>
           <div class="nav-hp">&#10010;</div>
