--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <!-- SIDE -->
   <div class="nav-menu">
     <ol>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about" onclick="closeNavMenu()">About</a></li>
+      <li><a href="#contact" onclick="closeNavMenu()">Contact</a></li>
     </ol>
     <a href="#" class="nav-menu-resume btn">Resume</a>
   </div>
