made section about

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <!-- MAIN -->
     <div id="content">
       <main>
+        <!-- HERO -->
         <section class="hero">
           <h3>Hello! <span class="emoji wave"></span></h3>
           <h1><span>I'm</span> Kelvin Andrian Nataniel,</h1>
@@ -104,6 +105,22 @@
             >
           </h2>
         </section>
+        <!-- END OF HERO -->
+
+        <!-- ABOUT ME -->
+
+        <section id="about" class="about">
+          <h2 class="section-heading">About Me</h2>
+          <div>
+            <div>
+              <p>Hi! My name is Kelvin and I am a web developer with a passion for front end development and design. I am currently a student at Esa Unggul University pursuing a degree in computer science with a minor in engineering. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</p>
+            </div>
+            <img src="img/headshot.jpg" alt="Headshot" width="300px" height="300px" style="object-fit: cover;">
+          </div>
+          
+        </section>
+        
+        <!-- END OF ABOUT ME -->
       </main>
     </div>
 
