--- a/index.html
+++ b/index.html
@@ -111,11 +111,13 @@
 
         <section id="about" class="about">
           <h2 class="section-heading">About Me</h2>
-          <div>
-            <div>
+          <div class="about-div">
+            <div class="about-text">
               <p>Hi! My name is Kelvin and I am a web developer with a passion for front end development and design. I am currently a student at Esa Unggul University pursuing a degree in computer science with a minor in engineering. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</p>
             </div>
-            <img src="img/headshot.jpg" alt="Headshot" width="300px" height="300px" style="object-fit: cover;">
+            <div class="about-headshot-wrapper">
+              <img src="/img/headshot.jpg" alt="Headshot" height="300px" width="300px">
+            </div>
           </div>
           
         </section>
