update responsive section about

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
   <body id="home">
     <img src="img/emojis/pointing-up.png" alt="" class="go2Top" />
 
-  <!-- MODAL -->
+    <!-- MODAL -->
 
-  <div class="modal"></div>
+    <div class="modal"></div>
 
-  <!-- END OF MODAL -->
+    <!-- END OF MODAL -->
 
-  <!-- SIDE -->
-  <div class="nav-menu">
-    <ol>
-      <li><a href="#about" onclick="closeNavMenu()">About</a></li>
-      <li><a href="#contact" onclick="closeNavMenu()">Contact</a></li>
-    </ol>
-    <a href="#" class="nav-menu-resume btn">Resume</a>
-  </div>
-  <!-- END OF ASIDE -->
+    <!-- SIDE -->
+    <div class="nav-menu">
+      <ol>
+        <li><a href="#about" onclick="closeNavMenu()">About</a></li>
+        <li><a href="#contact" onclick="closeNavMenu()">Contact</a></li>
+      </ol>
+      <a href="#" class="nav-menu-resume btn">Resume</a>
+    </div>
+    <!-- END OF ASIDE -->
 
     <!-- HEADER -->
     <header>
@@ -113,15 +113,30 @@
           <h2 class="section-heading">About Me</h2>
           <div class="about-div">
             <div class="about-text">
-              <p>Hi! My name is Kelvin and I am a web developer with a passion for front end development and design. I am currently a student at Esa Unggul University pursuing a degree in computer science with a minor in engineering. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.</p>
+              <p>
+                Hi! My name is Kelvin and I am a web developer with a passion
+                for front end development and design. I am currently a student
+                at
+                <a class="text" href="https://www.esaunggul.ac.id/" target="_blank"
+                  >Esa Unggul University</a
+                >
+                pursuing a degree in computer science with a minor in
+                engineering. I aspire toward a career that will allow me to
+                channel my creativity through crafting beautiful software and
+                engaging experiences.
+              </p>
             </div>
             <div class="about-headshot-wrapper">
-              <img src="/img/headshot.jpg" alt="Headshot" height="300px" width="300px">
+              <img
+                src="/img/headshot.jpg"
+                alt="Headshot"
+                height="300px"
+                width="300px"
+              />
             </div>
           </div>
-          
         </section>
-        
+
         <!-- END OF ABOUT ME -->
       </main>
     </div>
