--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
                 Hi! My name is Kelvin and I am a web developer with a passion
                 for front end development and design. I am currently a student
                 at
-                <a class="text" href="#" target="_blank" style="filter: blur(4px); cursor: not-allowed;"
+                <a
+                  class="text"
+                  href="#"
+                  target="_blank"
+                  style="filter: blur(4px); cursor: not-allowed"
                   >Esa Unggul University</a
                 >
                 pursuing a degree in computer science with a minor in
