update hader Icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
     <header>
       <nav>
         <h3 class="header-icon">
-          <a href="https://drian.xyz">ian</a>
+          <a href="https://drian.xyz"
+            ><img
+              src="/img/favicon/favicon-32x32.png"
+              alt="header-icon"
+              height="32px"
+              width="32px"
+          /></a>
         </h3>
         <div class="nav">
           <ol>
