--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <div class="modal"></div>
 
     <!-- END OF MODAL -->
+    
+    <!-- still under development -->
+    
+    <div class="sud-container">
+          <h2 class="sud">still under development.</h2>
+    </div>
 
     <!-- SIDE -->
     <div class="nav-menu">
@@ -70,7 +76,7 @@
         <h3 class="header-icon">
           <a href="https://drian.xyz"
             ><img
-              src="/img/favicon/favicon-32x32.png"
+              src="/img/favicon/apple-touch-icon.png"
               alt="header-icon"
               height="32px"
               width="32px"
