update responsive, header and animation

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         class="copyright"
         href="https://github.com/artxian/artxian.github.io"
         target="_blank"
-        >Designed & Developed by Kelvin Andrian Nataniel</a
+        >Handcrafted by Kelvin Andrian Nataniel</a
       >
     </footer>
 
