delete footer href

--- a/index.html
+++ b/index.html
@@ -160,18 +160,18 @@
         <a href="https://instagram.com/andriandme" target="_blank"
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <a href="https://github.com/artxian" target="_blank"
+        <a href="#" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.linkedin.com/in/kelvin-andrian-nataniel-63604b247/"
+          href="#"
           target="_blank"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
       </div>
       <a
         class="copyright"
-        href="https://github.com/artxian/artxian.github.io"
+        href="#"
         target="_blank"
         >Handcrafted by Kelvin Andrian Nataniel</a
       >
