update section hero

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <main>
         <!-- HERO -->
         <section class="hero">
-          <h3>Hello! <span class="emoji wave"></span></h3>
+          <h3><div></div><span class="emoji wave"></span></h3>
           <h1><span>I'm</span> Kelvin Andrian Nataniel,</h1>
           <p>
             a design-minded, detail oriented software engineer passionate about
